# llm-stt2

./: README.md
action/: pyproject.toml
action/scripts/: run_action.sh
action/src/action/: config.py  engine.py  followup_watcher.py  initial_watcher.py  llm_client.py  main.py  watcher.py
etc/: pyproject.toml
etc/scripts/: run_etc.sh
etc/src/etc/: config.py  engine.py  file_utils.py  followup_watcher.py  initial_watcher.py  llm_client.py  main.py  watcher.py
interim/: pyproject.toml
interim/scripts/: run_interim.sh
interim/src/interim/: config.py  file_utils.py  main.py  watcher.py
knowledge/: hospital_1f_map.json
location/: pyproject.toml
location/scripts/: run_location.sh
location/src/location/: config.py  engine.py  followup_watcher.py  initial_watcher.py  llm_client.py  main.py  map_rag.py  watcher.py
mixed/: pyproject.toml
mixed/scripts/: run_mixed.sh
mixed/src/mixed/: config.py  engine.py  followup_watcher.py  initial_watcher.py  llm_client.py  main.py  map_rag.py  watcher.py
stt/: pyproject.toml
stt/src/stt/: cli.py  config.py  postprocess.py  recorder.py  transcriber.py  writer.py
