[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "action"
version = "0.1.0"
description = "Action orchestrator-worker package using gpt-4o-mini"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
]

[project.scripts]
action = "action.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
