[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etc"
version = "0.1.0"
description = "ETC orchestrator-worker package using gpt-4o-mini"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
]

[project.scripts]
etc = "etc.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
