[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interim"
version = "0.1.0"
description = "Interim response output package"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
]

[project.scripts]
interim = "interim.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
