[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stt"
version = "0.1.0"
description = "Microphone STT package using whisper.cpp"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sounddevice",
    "numpy",
    "requests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
stt = "stt.cli:main"
